[metadata]
name = pysatellite
version = 0.0.2
author = Benedict Oakes
author_email = sgboakes@liverpool.ac.uk
description = Python implementation of satellite simulation for PhD
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sgboakes/pysatellite
project_urls = Bug Tracker = https://github.com/sgboakes/pysatellite/issues
